--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="content">
     <h1>About Me</h1>
     <img src="https://i.postimg.cc/VS2YGxnN/sleeping.jpg" alt="Sleeping Image">
-    <p>My name is Afonso. I'm 30 years old, and I like to sleep.</p>
+    <p>My name is Afonso. I'm 30 years old, and I like to sleep a lot.</p>
   </div>
 </body>
 </html>
